--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 		"whatsapp",
 		"bot"
 	],
-	"repository": "https://github.com/lyfe0010/whatsapp-bot-md",
+	"repository": "https://github.com/dlx-luttapi/new1",
 	"stack": "container",
 	"env": {
 		"ALWAYS_ONLINE": {
